# rusty

./: Cargo.toml  README.md  example.ry  fuzzed.txt  input.txt  pyproject.toml
docs/: grammar.md  rusty_language_manual.md  stdlib.md
examples/: array_creation_demo.ry  array_demo.ry  array_literal_demo.ry  array_methods_test.ry  array_namespace.ry  array_string_test.ry  array_test.ry  array_test_debug.ry  basic_fuzzer.ry  benchmark_matrix.py  benchmark_matrix.ry  custom_namespace.ry  debugging.ry  file_io_demo.ry  file_namespace.ry  file_unified_demo.ry  full_oop_demo.ry  fuzz_text.ry  hello_world.rs  js_style_arrays.ry  json_basic_demo.ry  json_file_example.ry  json_namespace.ry  json_utils.ry  log_analyzer.ry  math_namespace.ry  math_test.ry  minimal_fuzzer.ry  python_benchmark_result.txt  regex_demo.ry  regex_namespace.ry  run_benchmark.sh  shapes_namespace_demo.ry  simple_fuzzer.ry  simple_str_test.ry  stdlib_demo.ry  string_methods_test.ry  string_namespace.ry  string_test.ry  time_namespace.ry
examples/archive/: minimal_array.ry
examples/archive/json/: json_demo.ry  json_final.ry  json_objects_demo.ry  json_objects_working.ry  simple_json.ry  simple_json_test.ry  simple_object_demo.ry
examples/archive/regex/: email_regex_test.ry  regex_demo_mini.ry  regex_test.ry  regex_utils.ry  regex_utils_match.ry  regex_utils_mini.ry  (+1 more)
src/: ast_parser.rs  interpreter.rs  lexer.rs  lib.rs  stdlib.rs
src/stdlib/: array.rs  file.rs  json.rs  math.rs  mod.rs  regex.rs  string.rs  time.rs
test_files/: file_test_1743054568559.txt  file_test_1743054922181.txt
