[package]
name = "rustjs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A JavaScript-like scripting language implemented in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
logos = "0.13"
rand = "0.8.5"
regex = "1.10.2"
tempfile = "3.8"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"
